--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
     Copyright 2021 Pérez Hernández Denise Adriana
 </footer>
 
-<script src="js/CtrlProveedor.js">
+<script src="Js/CtrlProveedor.js">
 </script>
 </body>
 </html>
